--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,8 @@
  
 
   "AllowedHosts": "*",
-  "ConnectionStrings": {"ToDoDB": "server=localhost;user=root;password=aA1795aA;database=db;"}
+  "ConnectionStrings": {
+    "ToDoDB": "server=baiztfkxcaibipblbg5l-mysql.services.clever-cloud.com;user=uzcgbky4vwvoj3q7;password=PGRxiKToy7xMTLqUC5Bu;database=baiztfkxcaibipblbg5l;"
+  }
   
 }
